# fi-ethr-resolver

./: Cargo.toml
src/: did.rs  ethr.rs  lib.rs  util.rs  verification.rs
src/events/: attribute_changed.rs  delegate_changed.rs  mod.rs  owner_changed.rs
tests/: controller_test.rs
